--- a/theme/css/variables.less
+++ b/theme/css/variables.less
@@ -302,6 +302,16 @@ div[data-role='header']{
         border-top: 1px solid @gray-light;
         border-bottom: 1px solid @white;
        }
+
+       .s-feed-end {
+           a {
+               color: @gray-dark;
+               border-color: @gray-dark;
+           }
+           .outline-style:after {
+               color: @gray-dark;
+           }
+       }
 }
 
 //MAP PAGE
